@@ -1,0 +1,32 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/archive.R
+\name{archive}
+\alias{archive}
+\alias{git_archive}
+\title{Git Archive}
+\usage{
+git_archive(file = "archive.zip", repo = ".")
+}
+\arguments{
+\item{file}{name of the output zip file}
+
+\item{repo}{The repository to target, either as a filepath or as an object of
+class \code{git_repo_ptr}. If \code{repo} is a filepath and is not a repository, then
+its parent directory is considered, then the parent's parent, and so on. To
+prevent this recursive search, provide a filepath protected with \code{\link[=I]{I()}}.}
+}
+\description{
+Exports the files in your repository to a zip file.
+}
+\seealso{
+Other git: 
+\code{\link{branch}},
+\code{\link{commit}},
+\code{\link{fetch}},
+\code{\link{git_config}()},
+\code{\link{git_merge}()},
+\code{\link{git_open}()},
+\code{\link{repository}},
+\code{\link{signature}}
+}
+\concept{git}
