@@ -76,6 +76,7 @@ git_config_global()
 }
 \seealso{
 Other git: 
+\code{\link{archive}},
 \code{\link{branch}},
 \code{\link{commit}},
 \code{\link{fetch}},
